allow overflow for slot record labels, need fixing with z-index or something else perhaps

--- a/app/assets/volume/slot.styl
+++ b/app/assets/volume/slot.styl
@@ -330,8 +330,7 @@
   font-size f34
   float left
   white-space nowrap
-  overflow hidden
-  text-overflow ellipsis
+  overflow visible
   min-width 4px
   padding-width 0.5ex
   text-align center
